src/test/ui/existential_type.stderr
error[E0573]: expected type, found existential type `Foo`
  --> $DIR/existential_type.rs:17:13
   |
LL | fn foo() -> Foo { //~ ERROR expected type, found existential type `Foo`
   |             ^^^ not a type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0573`.
